--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.18.2",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.3"
+    "mongoose": "^6.7.3",
+    "mongoose-aggregate-paginate-v2": "^1.0.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
